kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service
spec:
  selector:
    app: my-nginx
  ports:
  - port: 80
    targetPort: 80
