kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mynginx.com
    http:
      paths:
      - backend:
          service:
            name: my-backend-service
            port:
              number: 80
        path: /
        pathType: Prefix
